--- a/new.test.html
+++ b/new.test.html
@@ -6,5 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h2>ami.ke</h2>
+    <h3>Home Services About Skills Portfolio Blog Contact</h3>
+    <br />
+    <h2>Page Not Found</h2>
+    <h6>Home > 404 Not Found</h6>
+    <h1>404</h1>
+    <p>Oops! That Page Can't Be Found.</p>
+    <small
+      >It looks like Nothing Was Found at This location Maybe Tryone Of The
+      lSinks Below or a Search</small
+    >
+    <br />
+    <br />
+    <form>
+      <input type="search" value="search here" />
+    </form>
+  </body>
 </html>
